--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: archive
 
 {{ content }}
 
+{% comment %}
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
@@ -17,4 +18,6 @@ layout: archive
   {% include documents-collection.html entries=posts type=entries_layout %}
 </div>
 
+
 {% include paginator.html %}
+{% endcomment %}
