--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -4,12 +4,6 @@ layout: default
 
 {% assign venue = site.data.venues[page.venue] %}
 
-{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
-  {% include page__hero.html %}
-{% elsif page.header.video.id and page.header.video.provider %}
-  {% include page__hero_video.html %}
-{% endif %}
-
 {% assign breadcrumbs_enabled = site.breadcrumbs %}
 {% if page.breadcrumbs != null %}
   {% assign breadcrumbs_enabled = page.breadcrumbs %}
@@ -62,13 +56,15 @@ layout: default
       <p>{{ page.description }}</p>
 
       <section class="page__content event-description" itemprop="text">
-        <div class="event-photo">
-          {% if page.photo %}
-            <img src="{{ page.photo }}" alt="Photo for {{ page.title }}">
+        <p>
+          {% if page.header.overlay_color or page.header.overlay_image %}
+            {% include page__hero.html %}
+          {% elsif page.header.image %}
+            <img src="{{ page.header.image | relative_url }}" alt="{{ page.title | escape }}" style="max-width: 100%; height: auto;">
+          {% elsif page.header.video.id and page.header.video.provider %}
+            {% include page__hero_video.html %}
           {% endif %}
-        </div>
-        <br />
-
+        </p>
         <section class="page__content event-description" itemprop="text">
           {{ content }}
         </section>
