--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -76,14 +76,13 @@ layout: default
       {% if venue %}
         {{ "## Getting There" | markdownify }}
         {% for transport in venue.getting_there %}
-          <strong>{{ transport.label }}</strong><br>
-          {{ transport.detail }}<br><br>
+          <strong>{{ transport.label }}</strong><br />
+          {{ transport.detail }}<br />
         {% endfor %}
         {% if venue.note %}
           <p>📝 {{ venue.note }}</p>
         {% endif %}
-      {% endif %}
-      
+      {% endif %}     
 
       <section class="event-rsvp2">
         <p>
