--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -119,7 +119,7 @@ layout: default
             {% endfor %}
           </dl>
           {% if venue.note %}
-            <p>📝 {{ venue.note }}</p>
+            <p>{{ venue.note | markdownify }}</p>
           {% endif %}
         {% endif %}
       {% endif %}
